--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -138,3 +138,9 @@
   <li><code>(*ebiten.Image).SubImage()</code> の結果が内部で一定時間キャッシュされるように修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2902">#2902</a>)。</li>
   <li>その他マイナーなパフォーマンス改善</li>
 </ul>
+<h2>v2.9.1</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/146?closed=1">Issues for v2.9.1</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>1 回キーを離しただけなのに、 <code>inpututil.IsKeyJustReleased</code> が連続したフレームで true を返すことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3326">#3326</a>)。</li>
+</ul>
