contents/en/documents/2.9: replace frames with ticks

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -142,5 +142,5 @@
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/146?closed=1">Issues for v2.9.1</a></p>
 <h3>Bug Fixes</h3>
 <ul>
-  <li>Fixed an issue where <code>inpututil.IsKeyJustReleased</code> could return true for multiple consecutive frames even though the key was released only once (<a href="https://github.com/hajimehoshi/ebiten/issues/3326">#3326</a>).</li>
+  <li>Fixed an issue where <code>inpututil.IsKeyJustReleased</code> could return true for multiple consecutive ticks (Update calls) even though the key was released only once (<a href="https://github.com/hajimehoshi/ebiten/issues/3326">#3326</a>).</li>
 </ul>
