contents/en/documents/2.9: v2.9.2 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -144,3 +144,9 @@
 <ul>
   <li>Fixed an issue where <code>inpututil.IsKeyJustReleased</code> could return true for multiple consecutive ticks (Update calls) even though the key was released only once (<a href="https://github.com/hajimehoshi/ebiten/issues/3326">#3326</a>).</li>
 </ul>
+<h2>v2.9.2</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/147?closed=1">Issues for v2.9.2</a></p>
+<h3>Bug Fixes</h3>
+<ul>
+  <li>Fixed an issue where vector rendering did not work correctly on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3330">#3330</a>).</li>
+</ul>
