contents/en/showcase: add Saeko

--- a/contents/ja/showcase.html
+++ b/contents/ja/showcase.html
@@ -1,4 +1,9 @@
 <h1>ショーケース</h1>
+<h2>SAEKO: Giantess Dating Sim</h2>
+<figure>
+  <p class="img"><a href="https://saekogame.com/"><img src="/images/showcase/saeko.png" width="744"></a></p>
+  <figcaption>Copyright <a href="https://safehavn.dev/">SAFE HAVN STUDIO</a></figcaption>
+</figure>
 <h2>狂気より愛をこめて</h2>
 <figure>
   <p class="img"><a href="https://playism.com/game/frommadness-withlove/"><img src="/images/showcase/frommadnesswithlove_ja.png" width="744"></a></p>
