contents/en/showcase: update saeko.png

--- a/contents/en/showcase.html
+++ b/contents/en/showcase.html
@@ -1,7 +1,7 @@
 <h1>Showcase</h1>
 <h2>SAEKO: Giantess Dating Sim</h2>
 <figure>
-  <p class="img"><a href="https://saekogame.com/"><img src="/images/showcase/saeko.png" width="744"></a></p>
+  <p class="img"><a href="https://saekogame.com/"><img src="/images/showcase/saeko.png?20251020" width="744"></a></p>
   <figcaption>Copyright <a href="https://safehavn.dev/">SAFE HAVN STUDIO</a></figcaption>
 </figure>
 <h2>From Madness with Love</h2>
