contents/en/documents/2.9: v2.9.3 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -150,3 +150,9 @@
 <ul>
   <li>Fixed an issue where vector rendering did not work correctly on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3330">#3330</a>).</li>
 </ul>
+<h2>v2.9.3</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/148?closed=1">Issues for v2.9.3</a></p>
+<h3>Bug Fixes</h3>
+<ul>
+  <li>Fixed a race condition that occurred during vector rendering on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3333">#3333</a>).</li>
+</ul>
