--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -150,3 +150,9 @@
 <ul>
   <li><code>SubImage</code> によって作られた画像に対するベクター描画が正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3330">#3330</a>)。</li>
 </ul>
+<h2>v2.9.3</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/148?closed=1">Issues for v2.9.2</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li><code>SubImage</code> によって作られた画像に対するベクター描画で、競合状態が発生していた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3333">#3333</a>)。</li>
+</ul>
