contents/en/documents/2.9: v2.9.4 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -156,3 +156,9 @@
 <ul>
   <li>Fixed a race condition that occurred during vector rendering on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3333">#3333</a>).</li>
 </ul>
+<h2>v2.9.4</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/149?closed=1">Issues for v2.9.4</a></p>
+<h3>Bug Fixes</h3>
+<ul>
+  <li>Fixed an issue where the Steam Overlay might not work on Linux (<a href="https://github.com/hajimehoshi/ebiten/issues/3338">#3338</a>).</li>
+</ul>
