contents/index: update sponsors

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -58,6 +58,7 @@
   </div>
 </div>
 <h2>スポンサー</h2>
+<p>(敬称略)</p>
 <h3>ゴールド</h3>
 <div class="grid-container">
   <div class="grid-item-2">
@@ -72,43 +73,49 @@
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/silbinarywolf"><img src="https://github.com/silbinarywolf.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/silbinarywolf">Jae Bentvelzen さん</a></figcaption>
+      <figcaption><a href="https://github.com/silbinarywolf">Jae Bentvelzen</a></figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/davidroman0O"><img src="https://github.com/davidroman0O.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/davidroman0O">David Roman さん</a></figcaption>
+      <figcaption><a href="https://github.com/davidroman0O">David Roman</a></figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
-      <figcaption>Paprika さん</figcaption>
+      <figcaption>Paprika</figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/smsunarto"><img src="https://github.com/smsunarto.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/smsunarto">Scott Sunarto さん</a></figcaption>
+      <figcaption><a href="https://github.com/smsunarto">Scott Sunarto</a></figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><img src="/images/gopher.png" width="168"></p>
-      <figcaption>Jordan Dziat さん</figcaption>
+      <figcaption>Jordan Dziat</figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/mcuadros"><img src="https://github.com/mcuadros.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/mcuadros">Máximo Cuadros さん</a></figcaption>
+      <figcaption><a href="https://github.com/mcuadros">Máximo Cuadros</a></figcaption>
     </figure>
   </div>
   <div class="grid-item-1">
     <figure>
       <p class="img avatar"><a href="https://github.com/m110"><img src="https://github.com/m110.png?size=168" width="168"></a></p>
-      <figcaption><a href="https://github.com/m110">Miłosz Smółka さん</a></figcaption>
+      <figcaption><a href="https://github.com/m110">Miłosz Smółka</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
+      <p class="img avatar"><a href="https://github.com/waystones"><img src="https://github.com/waystones.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/waystones">Waystones</a></figcaption>
     </figure>
   </div>
 </div>
