--- a/contents/en/documents/steam.html
+++ b/contents/en/documents/steam.html
@@ -20,7 +20,7 @@ func init() {
 	if steamworks.RestartAppIfNecessary(appID) {
 		os.Exit(1)
 	}
-	if !steamworks.Init() {
+	if err := steamworks.Init(); err != nil {
 		panic("steamworks.Init failed")
 	}
 }</code></pre>
