--- a/contents/ja/documents/steam.html
+++ b/contents/ja/documents/steam.html
@@ -20,9 +20,9 @@ func init() {
 	if steamworks.RestartAppIfNecessary(appID) {
 		os.Exit(1)
 	}
-	if err := steamworks.Init(); err != nil {
-		panic("steamworks.Init failed")
-	}
+    if err := steamworks.Init(); err != nil {
+         panic(fmt.Sprintf("steamworks.Init failed: %v", err))
+    }
 }</code></pre>
 <p>なおこのバインディングはまだ API をほとんど実装していません。今後対応予定です。</p>
 <h2>Windows</h2>
