contents/en/documents: v2.9.5 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -162,3 +162,9 @@
 <ul>
   <li>Fixed an issue where the Steam Overlay might not work on Linux (<a href="https://github.com/hajimehoshi/ebiten/issues/3338">#3338</a>).</li>
 </ul>
+<h2>v2.9.5</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/150?closed=1">Issues for v2.9.5</a></p>
+<h3>Bug Fixes</h3>
+<ul>
+  <li>Fixed an issue where vector rendering did not work correctly on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3355">#3355</a>).</li>
+</ul>
