--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -162,3 +162,9 @@
 <ul>
   <li>Linux で Steam のオーバーレイが動かないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3338">#3338</a>)。</li>
 </ul>
+<h2>v2.9.5</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/150?closed=1">Issues for v2.9.5</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li><code>SubImage</code> によって作られた画像に対するベクター描画が正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3355">#3355</a>)。</li>
+</ul>
