--- a/contents/ja/documents/steam.html
+++ b/contents/ja/documents/steam.html
@@ -9,6 +9,7 @@
 <pre><code>package main
 
 import (
+    "fmt"
 	"os"
 
 	"github.com/hajimehoshi/go-steamworks"
@@ -20,8 +21,8 @@ func init() {
 	if steamworks.RestartAppIfNecessary(appID) {
 		os.Exit(1)
 	}
-	if !steamworks.Init() {
-		panic("steamworks.Init failed")
+	if err := steamworks.Init(); err != nil {
+		panic(fmt.Sprintf("steamworks.Init failed: %v", err))
 	}
 }</code></pre>
 <p>なおこのバインディングはまだ API をほとんど実装していません。今後対応予定です。</p>
