contents/en/documents/2.9: v2.9.6 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -168,3 +168,10 @@
 <ul>
   <li>Fixed an issue where vector rendering did not work correctly on images created by <code>SubImage</code> (<a href="https://github.com/hajimehoshi/ebiten/issues/3355">#3355</a>).</li>
 </ul>
+<h2>v2.9.6</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/151?closed=1">Issues for v2.9.6</a></p>
+<h3>Bug fixes</h3>
+<ul>
+  <li>Fixed a rare freeze on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/3353">#3353</a>).</li>
+  <li>Fixed an issue where rendering results were incorrect when drawing a certain amount of vector graphics (<a href="https://github.com/hajimehoshi/ebiten/issues/3357">#3357</a>).</li>
+</ul>
