--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -168,3 +168,10 @@
 <ul>
   <li><code>SubImage</code> によって作られた画像に対するベクター描画が正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3355">#3355</a>)。</li>
 </ul>
+<h2>v2.9.6</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/151?closed=1">Issues for v2.9.6</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>macOS で稀に発生していたフリーズの修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3353">#3353</a>)。</li>
+  <li>ベクターグラフィックスを一定量描画すると描画結果が正しくなくなることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3357">#3357</a>)。</li>
+</ul>
