contents/en/documents/2.9: v2.9.7 released

--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -175,3 +175,9 @@
   <li>macOS で稀に発生していたフリーズの修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3353">#3353</a>)。</li>
   <li>ベクターグラフィックスを一定量描画すると描画結果が正しくなくなることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3357">#3357</a>)。</li>
 </ul>
+<h2>v2.9.7</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/152?closed=1">Issues for v2.9.7</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>macOS でフルスクリーンにする時にしばらくフリーズしていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3354">#3354</a>)。</li>
+</ul>
