--- a/contents/index.html
+++ b/contents/index.html
@@ -111,6 +111,12 @@
       <figcaption><a href="https://github.com/m110">Miłosz Smółka</a></figcaption>
     </figure>
   </div>
+  <div class="grid-item-1">
+    <figure>
+      <p class="img avatar"><a href="https://github.com/qmuntal"><img src="https://github.com/qmuntal.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/qmuntal">Quim Muntal</a></figcaption>
+    </figure>
+  </div>
 </div>
 <p class="img" style="justify-content: start;">
   <iframe src="https://github.com/sponsors/hajimehoshi/button" title="Sponsor hajimehoshi" height="35" width="116" style="border: 0;"></iframe>
