contents/en/documents/2.9: v2.9.8 released

--- a/contents/en/documents/2.9.html
+++ b/contents/en/documents/2.9.html
@@ -181,3 +181,9 @@
 <ul>
   <li>Fixed an issue where the application froze for a while when entering fullscreen on macOS (<a href="https://github.com/hajimehoshi/ebiten/issues/3354">#3354</a>).</li>
 </ul>
+<h2>v2.9.8</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/153?closed=1">Issues for v2.9.8</a></p>
+<h3>Bug Fixes</h3>
+<ul>
+  <li>Fixed an issue where vector rendering results became incorrect when drawing very large vectors (<a href="https://github.com/hajimehoshi/ebiten/issues/3377">#3377</a>).</li>
+</ul>
