--- a/contents/ja/documents/2.9.html
+++ b/contents/ja/documents/2.9.html
@@ -181,3 +181,9 @@
 <ul>
   <li>macOS でフルスクリーンにする時にしばらくフリーズしていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3354">#3354</a>)。</li>
 </ul>
+<h2>v2.9.8</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/153?closed=1">Issues for v2.9.8</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>一定以上に巨大なベクター描画の描画結果が正しくなくなることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/3377">#3377</a>)。</li>
+</ul>
